# GitPhish

./: .gitignore  README.md  pyproject.toml
gitphish/: __main__.py
gitphish/config/: auth.py  deployment.py
gitphish/core/accounts/auth/: token_validator.py
gitphish/core/accounts/clients/: github_client.py
gitphish/core/accounts/services/: base_service.py  compromised_service.py  deployer_service.py
gitphish/core/cli/: __init__.py  deploy.py  gui.py  manual.py  postex.py  server.py
gitphish/core/clients/auth/: github_oauth_client.py
gitphish/core/common/: file.py
gitphish/core/common/security/: ssl_generator.py
gitphish/core/deployment/: README.md  factory.py
gitphish/core/deployment/services/: deployment_service.py
gitphish/core/deployment/types/: base.py
gitphish/core/deployment/types/github_pages/: deployer.py
gitphish/core/deployment/types/github_pages/templates/: landing_page.html  (+1 more)
gitphish/core/gui/: server.py
gitphish/core/gui/api/: accounts_api.py  deployment_api.py  server_control_api.py
gitphish/core/gui/templates/: base.html  compromised_accounts.html  dashboard.html  deployments_management.html  logs.html  server_management.html
gitphish/core/manual/: manual.py
gitphish/core/server/: server.py
gitphish/models/: __init__.py  database.py
gitphish/models/auth_attempts/: __init__.py  auth.py
gitphish/models/github/: base_github_account.py  compromised_account.py  github_account.py
gitphish/models/github_pages/: __init__.py  deployment.py
gitphish/static/landing_page/: index.html  index.local.html  index_example.html
